<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="@dimen/big_padding"
        android:background="@color/bg"

        android:orientation="vertical"
        tools:context=".ui.activity.RegistrationActivity">

    <EditText
            android:id="@+id/email_input"
            android:background="@drawable/input_bg"
            android:paddingHorizontal="@dimen/normal_padding"
            android:layout_marginVertical="@dimen/normal_margin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"/>
    <EditText
            android:id="@+id/password_input"
            android:background="@drawable/input_bg"
            android:paddingHorizontal="@dimen/normal_padding"
            android:layout_marginVertical="@dimen/normal_margin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:inputType="textPassword"
            android:hint="@string/password_hint"/>

    <EditText
            android:id="@+id/password_confirm_input"
            android:background="@drawable/input_bg"
            android:paddingHorizontal="@dimen/normal_padding"
            android:layout_marginVertical="@dimen/normal_margin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:inputType="textPassword"
            android:hint="@string/password_confirm_hint"/>

    <Button
            android:id="@+id/singup_btn"
            android:background="@drawable/sign_up_btn_bg"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/normal_margin"
            android:text="@string/sign_up_button_text"/>

</LinearLayout>