<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.MainActivity"
        android:background="@color/bg"
        android:orientation="vertical">

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/normal_padding"
                        android:orientation="vertical">

                        <android.support.v7.widget.CardView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/normal_margin">

                                <RelativeLayout
                                        android:padding="@dimen/row_padding"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:background="@color/colorPrimary">

                                        <TextView
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:layout_centerVertical="true"
                                                android:textColor="@color/title"
                                                android:textSize="@dimen/logo_text_size"
                                                android:text="@string/logo_text"/>


                                        <Button
                                                android:id="@+id/my_movie_list_button"
                                                android:background="@drawable/login_btn_bg"
                                                android:layout_width="wrap_content"
                                                android:textColor="@color/white"
                                                android:layout_height="@dimen/log_in_out_button_height"
                                                android:layout_marginRight="@dimen/normal_margin"
                                                android:layout_toLeftOf="@+id/log_in_out_button"
                                                android:text="@string/my_movie_list"/>

                                        <Button
                                                android:id="@+id/log_in_out_button"
                                                android:background="@drawable/login_btn_bg"
                                                android:layout_width="wrap_content"
                                                android:textColor="@color/white"
                                                android:layout_height="@dimen/log_in_out_button_height"
                                                android:layout_alignParentRight="true"
                                                android:text="@string/login_button_text"/>

                                </RelativeLayout>

                        </android.support.v7.widget.CardView>

                        <android.support.v7.widget.CardView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/colorPrimary"

                                android:layout_marginBottom="@dimen/normal_margin">
                                <LinearLayout

                                        android:background="@color/colorPrimary"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:padding="@dimen/row_padding"

                                        android:orientation="vertical">

                                        <TextView
                                                android:id="@+id/geners_title"
                                                android:textColor="@color/title"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:textSize="@dimen/category_movie_text_size"
                                                android:text="@string/genres_title"
                                                android:layout_marginBottom="@dimen/normal_margin"
                                                />

                                        <android.support.v7.widget.RecyclerView
                                                android:id="@+id/geners_list"
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                tools:listitem="@layout/layout_item_button_genre"
                                                />
                                </LinearLayout>
                        </android.support.v7.widget.CardView>

                        <android.support.v7.widget.CardView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/normal_margin">
                                <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:padding="@dimen/row_padding"

                                        android:background="@color/colorPrimary"

                                        android:orientation="vertical">
                                        <TextView
                                                android:id="@+id/popular_list_title"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:textSize="@dimen/category_movie_text_size"
                                                android:text="@string/popular_title"
                                                android:textColor="@color/title"
                                                android:layout_marginBottom="@dimen/normal_margin"
                                                tools:text="Category"/>

                                        <android.support.v7.widget.RecyclerView
                                                android:id="@+id/popular_movie_list"
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                tools:listitem="@layout/layout_item_movie"
                                                />
                                </LinearLayout>
                        </android.support.v7.widget.CardView>

                        <android.support.v7.widget.CardView

                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/normal_margin">
                                <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:padding="@dimen/row_padding"
                                        android:background="@color/colorPrimary"
                                        android:orientation="vertical">
                                        <TextView
                                                android:id="@+id/top_rated_list_title"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:textSize="@dimen/category_movie_text_size"
                                                android:text="@string/top_rated_title"
                                                android:textColor="@color/title"
                                                android:layout_marginBottom="@dimen/normal_margin"
                                                tools:text="Category"/>

                                        <android.support.v7.widget.RecyclerView
                                                android:id="@+id/top_rated_movie_list"
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                tools:listitem="@layout/layout_item_movie"
                                                />
                                </LinearLayout>
                        </android.support.v7.widget.CardView>
                        <android.support.v7.widget.CardView

                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/normal_margin">
                                <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:padding="@dimen/row_padding"
                                        android:background="@color/colorPrimary"
                                        android:orientation="vertical">
                                        <TextView
                                                android:id="@+id/now_playing_list_title"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:textSize="@dimen/category_movie_text_size"
                                                android:text="@string/now_playing_title"
                                                android:textColor="@color/title"
                                                android:layout_marginBottom="@dimen/normal_margin"
                                                tools:text="Category"/>

                                        <android.support.v7.widget.RecyclerView
                                                android:id="@+id/now_playing_movie_list"
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                tools:listitem="@layout/layout_item_movie"
                                        />
                                </LinearLayout>
                        </android.support.v7.widget.CardView>
                        <android.support.v7.widget.CardView

                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/normal_margin">
                                <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:padding="@dimen/row_padding"
                                        android:background="@color/colorPrimary"
                                        android:orientation="vertical">
                                        <TextView
                                                android:id="@+id/upcoming_list_title"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:textSize="@dimen/category_movie_text_size"
                                                android:text="@string/upcoming_title"
                                                android:textColor="@color/title"
                                                android:layout_marginBottom="@dimen/normal_margin"
                                                tools:text="Category"/>

                                        <android.support.v7.widget.RecyclerView
                                                android:id="@+id/upcoming_movie_list"
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                tools:listitem="@layout/layout_item_movie"
                                        />
                                </LinearLayout>
                        </android.support.v7.widget.CardView>


                </LinearLayout>

        </ScrollView>
</LinearLayout>